# stationapiv2.2

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  build.xml
cmake/: FindMariaDB.cmake
docs/: chat_service_analysis.md
extras/: bootstrap_build.sh  finalize_chat_install.sh  init_database.sql  install_stationchat_service.sh  setup_pi4_database.sh  stationchat_tmux_wrapper.sh  swgchat.cfg.dist
src/: CMakeLists.txt
src/stationapi/: CMakeLists.txt  MariaDB.cpp  MariaDB.hpp  MariaDBStub.cpp  Node.hpp  NodeClient.hpp  Serialization.hpp  StringUtils.cpp  StringUtils.hpp
src/stationchat/: CMakeLists.txt  ChatAvatarService.cpp  ChatAvatarService.hpp  ChatEnums.hpp  ChatRoom.cpp  ChatRoom.hpp  ChatRoomService.cpp  ChatRoomService.hpp  ChatSystem.hpp  GatewayClient.cpp  GatewayClient.hpp  GatewayNode.cpp  GatewayNode.hpp  PersistentMessageService.cpp  PersistentMessageService.hpp  RegistrarClient.cpp  RegistrarClient.hpp  RegistrarNode.cpp  RegistrarNode.hpp  RequestFailureHandling.hpp  StationChatApp.cpp  StationChatConfig.cpp  StationChatConfig.hpp  WebsiteIntegrationService.cpp  WebsiteIntegrationService.hpp  main.cpp
src/stationchat/protocol/: LoginAvatar.hpp  Protocol.cpp  SetApiVersion.hpp
tests/: CMakeLists.txt  main.cpp
tests/stationapi/: ApiVersionNegotiation_Tests.cpp  LoginAvatarAuthIntegration_Tests.cpp  RequestFailureHandling_Tests.cpp  Serialization_Tests.cpp  StringUtils_Tests.cpp
tests/stationchat/: ChatRoomService_Tests.cpp  ChatSystem_Tests.cpp  FakeMariaDB.cpp  FakeMariaDB.hpp  PersistentMessageService_Tests.cpp  StubChatAvatarService.cpp  WebsiteIntegrationService_Tests.cpp
